--- a/cmdx.yaml
+++ b/cmdx.yaml
@@ -46,3 +46,7 @@ tasks:
     description: Format GO codes
     usage: Format GO codes
     script: bash scripts/fmt.sh
+  - name: js
+    description: Generate JSON Schema
+    usage: Generate JSON Schema
+    script: bash scripts/generate-json-schema.sh
