--- a/.github/workflows/wc-integration-test.yaml
+++ b/.github/workflows/wc-integration-test.yaml
@@ -11,4 +11,4 @@ jobs:
         with:
           go-version: 1.21.5
       - run: go install ./cmd/lintnet
-      - run: lintnet -c lintnet-ci.jsonnet lint
+      - run: lintnet lint
