ci: fix the permission for enable auto-merge

--- a/.github/workflows/wc-enable-auto-merge.yaml
+++ b/.github/workflows/wc-enable-auto-merge.yaml
@@ -22,7 +22,7 @@ jobs:
           permissions: >-
             {
               "contents": "write",
-              "pull-requests": "write"
+              "pull_requests": "write"
             }
           repositories: >-
             [
