--- a/.github/workflows/wc-integration-test.yaml
+++ b/.github/workflows/wc-integration-test.yaml
@@ -3,6 +3,7 @@ name: integration-test
 on: workflow_call
 jobs:
   integration-test:
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     permissions: {}
     steps:
