--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,35 +3,16 @@ name: test
 on: pull_request
 permissions: {}
 jobs:
-  path-filter:
-    # Get changed files to filter jobs
+  status-check:
+    runs-on: ubuntu-24.04
+    if: failure()
     timeout-minutes: 10
-    outputs:
-      renovate-config-validator: ${{steps.changes.outputs.renovate-config-validator}}
-    runs-on: ubuntu-latest
     permissions: {}
+    needs:
+      - test
     steps:
-      - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
-        id: changes
-        with:
-          filters: |
-            renovate-config-validator:
-              - renovate.json5
-              - .github/workflows/test.yaml
-              - .github/workflows/wc-renovate-config-validator.yaml
-
-  renovate-config-validator:
-    uses: ./.github/workflows/wc-renovate-config-validator.yaml
-    needs: path-filter
-    if: needs.path-filter.outputs.renovate-config-validator == 'true'
+      - run: exit 1
+  test:
+    uses: ./.github/workflows/workflow_call_test.yaml
     permissions:
       contents: read
-
-  test:
-    uses: ./.github/workflows/wc-test.yaml
-    needs: path-filter
-    permissions: {}
-
-  integration-test:
-    uses: ./.github/workflows/wc-integration-test.yaml
-    permissions: {}
