--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -52,7 +52,6 @@ brews:
     repository:
       owner: lintnet
       name: homebrew-lintnet
-      token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
     # The project name and current git tag are used in the format string.
     commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
     # Your app's homepage.
@@ -71,7 +70,7 @@ brews:
     # If set to auto, the release will not be uploaded to the homebrew tap
     # in case there is an indicator for prerelease in the tag e.g. v1.0.0-rc1
     # Default is false.
-    skip_upload: auto
+    skip_upload: true
 
     # So you can `brew test` your formula.
     # Default is empty.
@@ -90,8 +89,7 @@ scoops:
     description: |
       Secure, Powerful, Reusable Configuration file linter powered by Jsonnet
     license: MIT
-    skip_upload: auto
+    skip_upload: true
     repository:
       owner: lintnet
       name: scoop-bucket
-      token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
