chore: add license files of Go and Go Modules to released assets

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,6 +7,10 @@ archives:
     format_overrides:
       - goos: windows
         formats: [zip]
+    files:
+      - LICENSE
+      - README.md
+      - third_party_licenses/**/*
 
 builds:
   - binary: lintnet
