--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,4 +15,5 @@ jobs:
   test:
     uses: ./.github/workflows/workflow_call_test.yaml
     permissions:
-      contents: read
+      contents: write
+      issues: write
