--- a/.github/workflows/workflow_call_test.yaml
+++ b/.github/workflows/workflow_call_test.yaml
@@ -3,35 +3,21 @@ name: test (workflow_call)
 on: workflow_call
 permissions: {}
 jobs:
-  path-filter:
-    # Get changed files to filter jobs
-    timeout-minutes: 10
-    outputs:
-      renovate-config-validator: ${{steps.changes.outputs.renovate-config-validator}}
-    runs-on: ubuntu-latest
-    permissions: {}
-    steps:
-      - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
-        id: changes
-        with:
-          filters: |
-            renovate-config-validator:
-              - renovate.json5
-              - .github/workflows/test.yaml
-              - .github/workflows/wc-renovate-config-validator.yaml
-
-  renovate-config-validator:
-    uses: ./.github/workflows/wc-renovate-config-validator.yaml
-    needs: path-filter
-    if: needs.path-filter.outputs.renovate-config-validator == 'true'
-    permissions:
-      contents: read
-
   test:
-    uses: ./.github/workflows/wc-test.yaml
-    needs: path-filter
-    permissions: {}
+    uses: suzuki-shunsuke/go-test-full-workflow/.github/workflows/test.yaml@3429e3ed1cb719d01112a04a07ff8754510cd9df # v4.0.0
+    with:
+      aqua_version: v2.53.9
+      golangci-lint-timeout: 120s
+    permissions:
+      pull-requests: write
+      contents: read
 
   integration-test:
     uses: ./.github/workflows/wc-integration-test.yaml
     permissions: {}
+
+  test_doc:
+    uses: ./.github/workflows/workflow_call_deploy_doc.yaml
+    permissions:
+      contents: write
+      issues: write
