chore: move the document to this repository (#1075)
* chore: move the document to this repository

* [autofix.ci] apply automated fixes

* ci: fix permissions

* fix: fix typo

* [autofix.ci] apply automated fixes

---------

Co-authored-by: autofix-ci[bot] <114827586+autofix-ci[bot]@users.noreply.github.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,4 +15,6 @@ jobs:
   test:
     uses: ./.github/workflows/workflow_call_test.yaml
     permissions:
-      contents: read
+      contents: write
+      issues: write
+      pull-requests: write
